@@ -59,8 +59,8 @@ t_2_004.cpp
 t_2_005.cpp
 t_2_006.cpp
 t_2_007.cpp
-t_2_009.cpp
 t_2_008.cpp
+t_2_009.cpp
 t_2_010.cpp
 t_2_011.cpp
 t_2_012.cpp
@@ -83,6 +83,7 @@ t_3_004.cpp
 t_4_001.cpp
 t_4_002.cpp
 t_4_003.cpp
+t_4_004.cpp
 
 #
 # unit tests from the mcpp preprocessor validation suite
